# Avionics_ROS

./: .gitignore  .gitmodules  README.md  create_custom_msg.sh  generate_structs  test.py
avionics_BMS/: ERC_EL.code-workspace  esp32_uart  esp32_uart.cpp  example_usage
avionics_main/launch/: avionics_launch.py
avionics_mux/: CMakeLists.txt
avionics_mux/include/avionics_mux/: MuxManager.h  MuxPublisher.h  MuxSubscriber.h
avionics_mux/src/: MuxManager.cpp  MuxPublisher.cpp  MuxSubscriber.cpp  avionics_mux.cpp  define.hpp
custom_msg/: CMakeLists.txt
custom_msg/config/: hd_interface_names.yaml
custom_msg/msg/hd/: HDGoal.msg
custom_msg/msg/not_hd/: ServoRequest.msg
docker_humble_jetson/: Dockerfile  run.sh
reference_code/roco-ros-interface/include/roco-ros-interface/: BRoCoSubscriber.h
reference_code/roco-ros-interface/src/: BRoCoManager.cpp  BRoCoPublisher.cpp  BRoCoSubscriber.cpp
src/: create_custom_msg.sh  generate_structs
src/avionics_BMS_new/: package.xml  setup.cfg  setup.py
src/avionics_BMS_new/avionics_BMS_new/: avionics_BMS_new.py
src/avionics_BMS_new/launch/: avionics_bms_launch.py
src/avionics_bms/: bms_monitor.py  package.xml  setup.cfg  setup.py
src/avionics_bms/avionics_bms/: __init__.py
src/avionics_bms/launch/: bms_launch.py
src/avionics_costco/: CMakeLists.txt  package.xml
src/avionics_costco/SerialHandler/Serial/: SerialHandler.cpp  SerialHandler.hpp
src/avionics_costco/costco/include/: CostcoPublisher.h
src/avionics_costco/costco/src/: CostcoPublisher.cpp
src/avionics_costco/include/: Cosco.hpp  CostcoPublisher.h  CostcoSubscriber.h  CsvMessageLogger.hpp  SerialDriver.hpp  SerialProtocol.hpp  StreamLike.hpp  packet_definition.hpp  packet_id.hpp  serial_protocol.hpp
src/avionics_costco/launch/: launch.py
src/avionics_costco/src/: Cosco.cpp  CostcoMain.cpp  CostcoPublisher.cpp  CostcoSubscriber.cpp  SerialDriver.cpp  fzgd.c  fzgd.txt  generate_structs.cpp  serial_protocol.cpp  test
src/avionics_costco_old/costco/include/: CostcoPublisher.h
src/avionics_costco_old/costco/src/: CostcoPublisher.cpp
src/avionics_main/launch/: avionics_launch.py
src/avionics_mux/: CMakeLists.txt  package.xml
src/avionics_mux/include/avionics_mux/: MuxManager.h  MuxPublisher.h  MuxSubscriber.h
src/avionics_mux/src/: MuxManager.cpp  MuxPublisher.cpp  MuxSubscriber.cpp  avionics_mux.cpp
src/avionics_nexus/: CMakeLists.txt  package.xml
src/avionics_nexus/include/: CsvMessageLogger.hpp  Nexus.hpp  NexusPublisher.h  NexusSubscriber.h  SerialDriver.hpp  SerialProtocol.hpp  StreamLike.hpp  packet_id.hpp
src/avionics_nexus/launch/: launch.py
src/avionics_nexus/src/: Nexus.cpp  NexusMain.cpp  NexusPublisher.cpp  NexusSubscriber.cpp  SerialDriver.cpp  generate_structs.cpp
src/avionics_serial/: .gitignore  serial  serial.cpp  serial_talker.cpp
src/avionics_serial_listener/: serial_listener.cpp
src/avionics_serial_protocol/: main.cpp  serial  serial_protocol.cpp  serial_protocol.hpp
src/custom_msg/: CMakeLists.txt
src/custom_msg/config/: hd_interface_names.yaml
src/docker_humble_desktop/: Dockerfile  run.sh
src/docker_humble_jetson/: Dockerfile  run.sh  start_elec_stack.sh
src/python_node/: package.xml  setup.py
src/python_node/launch/: python_launch.py
src/python_node/python_node/: __init__.py  python_node.py  test.txt
